--- a/SpringBoot/src/main/resources/templates/header.html
+++ b/SpringBoot/src/main/resources/templates/header.html
@@ -59,8 +59,8 @@
     </style>
     <ul class="menu-main">
         <li><a href="/app">Главная</a></li>
-        <li><a href="/app/products">Продукты</a></li>
-        <li><a href="addproduct.html">Новый продукт</a></li>
+        <li><a href="/app/products.html">Товары</a></li>
+        <li><a href="/app/addproduct.html">Новый товар</a></li>
     </ul>
 </menu>
 
