fifth task completed

--- a/SpringBoot/src/main/resources/templates/index.html
+++ b/SpringBoot/src/main/resources/templates/index.html
@@ -1,11 +1,11 @@
 <html xmlns:th="http://www.thymeleaf.org">
-<head>
+    <head>
 
-    <menu th:replace="header :: menu"> </menu>
+        <menu th:replace="default :: menu"> </menu>
 
-</head>
+    </head>
 
-<body>
+    <body>
 
-</body>
+    </body>
 </html>
