--- a/SpringBoot/src/main/resources/templates/changeproduct.html
+++ b/SpringBoot/src/main/resources/templates/changeproduct.html
@@ -1,25 +1,29 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:th="http://thymeleaf.org"
+      xmlns:th="http://www.thymeleaf.org"
       lang="ru">
 
     <head>
+
         <meta charset="UTF-8">
         <title>Новый продукт</title>
 
         <menu th:replace="default :: menu"> </menu>
-
         <form_style th:replace="default :: form_style"></form_style>
 
     </head>
+
     <body>
 
-        <form class="form" method="POST" th:action="@{/addproduct.html}" th:object="${product}">
+        <form class="form" method="POST" th:action="@{/changeproduct.html}" th:object="${product}">
 
-            <h1 class="form_title">Новый товар</h1>
+            <h1 class="form_title">Форма изменения отвара</h1>
+
+            <input type="hidden" th:field="*{id}"/>
 
             <div class="form_grup">
-                <input class="form_input" placeholder="Название" type="text" th:field="*{title}"/>
+                <input class="form_input" placeholder="Название" type="text"
+                       th:field="*{title}"/>
             </div>
 
             <div class="form_grup">
@@ -27,7 +31,7 @@
                        th:field="*{price}"/>
             </div>
 
-            <button class="form_button" type="submit">Добавить</button>
+            <button class="form_button" type="submit">Изменить</button>
 
         </form>
 
