--- a/SpringBoot/src/main/resources/templates/products.html
+++ b/SpringBoot/src/main/resources/templates/products.html
@@ -1,50 +1,45 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
 
-<html lang="ru">
-<head>
-    <meta charset="UTF-8">
-    <title>Список товаров</title>
+    <html xmlns:th="http://thymeleaf.org">
+    <html lang="ru">
 
-    <menu th:replace="header :: menu"> </menu>
+    <head>
+        <meta charset="UTF-8">
+        <title>Список товаров</title>
 
-    <style>
-        table {border-collapse: separate; border-spacing: 4px;}
-        table thead tr {color: #ffffff; font-weight: bold;}
-        table thead tr td {border-radius: 4px 4px 0 0; background: #2e82c3;}
-        table tbody tr td {border: 1px solid #2e82c3; border-radius: 4px; background: #cbdfef;}
-        table tbody tr td:hover {background: #a2c3dd; transition-duration: 0.2s;}
-        .addbutton {
-            border-radius: 4px;
-            padding: 8px 24px;
-            font-size: 18px;
-            color: black;
-            background-color: #cbdfef;
-            border: 1px solid #266b9f;
-        }
-    </style>
+        <menu th:replace="default :: menu"> </menu>
 
-</head>
-<body>
+        <table_style th:replace="default :: table_style"> </table_style>
 
-    <table>
-        <tr>
-            <th>ID</th>
-            <th>НАЗВАНИЕ</th>
-            <th>ЦЕНА</th>
-            <th>ОПИСАНИЕ</th>
-        </tr>
-        <tr th:each="product : ${productList}">
-            <td width="50" align="center" th:text="${product.getId()}">id</td>
-            <td width="200" th:text="${product.getTitle()}">title</td>
-            <td width="100" align="center" th:text="${product.getCost()}">cost</td>
-            <td width="150" align="center"><a th:href="@{/product/{id}(id=${product.getId()})}" th:text="открыть"></a></td>
-        </tr>
-    </table>
+    </head>
 
-    <br>
+    <body>
+        <table>
+            <tr>
+                <th>ID</th>
+                <th>НАЗВАНИЕ</th>
+                <th>ЦЕНА</th>
+                <th></th>
+                <th></th>
+                <th></th>
+            </tr>
+            <tr th:each="product : ${productList}">
+                <td width="50" align="center" th:text="${product.getId()}">id</td>
+                <td width="200" th:text="${product.getTitle()}">title</td>
+                <td width="100" align="center" th:text="${product.getPrice()}">cost</td>
+                <td width="150" align="center">
+                    <a th:href="@{/product/{id}(id=${product.getId()})}" th:text="Описание"></a>
+                </td>
+                <td width="150" align="center">
+                    <a th:href="@{/change/{id}(id=${product.getId()})}" th:text="Изменить"></a>
+                </td>
+                <td width="150" align="center">
+                    <a th:href="@{/delete/{id}(id=${product.getId()})}" th:text="Удалить"></a>
+                </td>
+            </tr>
+        </table>
+        <br>
+        <a class="addbutton" href='addproduct.html'>Добавить</a>
+    </body>
 
-    <a class="addbutton" href='addproduct.html' >Добавить</a>
-
-</body>
 </html>
