sixth task completed

--- a/SpringBoot/src/main/resources/templates/default.html
+++ b/SpringBoot/src/main/resources/templates/default.html
@@ -37,30 +37,15 @@
             text-transform: uppercase;
             display: inline-block;
             transition: color .2s;
-        }.menu-main li:after {
-             content: "|";
-             color: #606060;
-             display: inline-block;
-             vertical-align:top;
-         }
-        .menu-main li:last-child:after {content: none;}
-        .menu-main a {
-            text-decoration: none;
-            font-family: 'Ubuntu Condensed', sans-serif;
-            letter-spacing: 2px;
-            position: relative;
-            padding-bottom: 20px;
-            margin: 0 15px 0 15px;
-            font-size: 14px;
-            text-transform: uppercase;
-            display: inline-block;
-            transition: color .2s;
+        }
+        .list {
+            line-height: 0.1;
         }
     </style>
     <ul class="menu-main">
         <li><a href="/app">Главная</a></li>
+        <li><a href="/app/customers.html">Покупатели</a></li>
         <li><a href="/app/products.html">Товары</a></li>
-        <li><a href="/app/addproduct.html">Новый товар</a></li>
     </ul>
 </menu>
 
