--- a/SpringBoot/src/main/resources/templates/products.html
+++ b/SpringBoot/src/main/resources/templates/products.html
@@ -1,45 +1,35 @@
 <!DOCTYPE html>
 
-    <html xmlns:th="http://thymeleaf.org">
+    <html xmlns:th="http://www.thymeleaf.org">
     <html lang="ru">
 
     <head>
         <meta charset="UTF-8">
         <title>Список товаров</title>
-
         <menu th:replace="default :: menu"> </menu>
-
         <table_style th:replace="default :: table_style"> </table_style>
-
     </head>
 
     <body>
         <table>
+
             <tr>
                 <th>ID</th>
                 <th>НАЗВАНИЕ</th>
                 <th>ЦЕНА</th>
-                <th></th>
-                <th></th>
-                <th></th>
+                <th>ПОКУПАТЕЛИ</th>
             </tr>
-            <tr th:each="product : ${productList}">
-                <td width="50" align="center" th:text="${product.getId()}">id</td>
+
+            <tr align="center" th:each="product : ${productList}">
+                <td width="50" th:text="${product.getId()}">id</td>
                 <td width="200" th:text="${product.getTitle()}">title</td>
-                <td width="100" align="center" th:text="${product.getPrice()}">cost</td>
-                <td width="150" align="center">
-                    <a th:href="@{/product/{id}(id=${product.getId()})}" th:text="Описание"></a>
-                </td>
-                <td width="150" align="center">
-                    <a th:href="@{/change/{id}(id=${product.getId()})}" th:text="Изменить"></a>
-                </td>
-                <td width="150" align="center">
-                    <a th:href="@{/delete/{id}(id=${product.getId()})}" th:text="Удалить"></a>
+                <td width="100" th:text="${product.getPrice()}">cost</td>
+                <td>
+                    <a th:href="@{/customer_list/{id}(id=${product.getId()})}">список</a>
                 </td>
             </tr>
+
         </table>
-        <br>
-        <a class="addbutton" href='addproduct.html'>Добавить</a>
     </body>
 
 </html>
