--- a/SpringBoot/src/main/resources/templates/index.html
+++ b/SpringBoot/src/main/resources/templates/index.html
@@ -1,14 +1,25 @@
 <html xmlns:th="http://www.thymeleaf.org">
     <head>
-        <menu th:replace="default :: menu"> </menu>
+        <div style="padding-left: 50px; padding-right: 50px">
+            <menu th:replace="styles :: menu"> </menu>
+        </div>
     </head>
-        <h1 style="padding-left: 100px">Главная страница</h1>
-        <h2 th:text="${currentName}">Добро пожаловать</h2>
+
     <body>
-        <div style="padding-left: 50px; padding-right: 300px">
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab adipisci at consequuntur, dicta eligendi fuga fugit illum impedit, qui quis reprehenderit sed similique sint. Accusamus assumenda consequatur culpa reiciendis repudiandae!</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto quaerat reiciendis sit voluptas. A aliquam eos laboriosam laudantium magnam sunt ullam ut. Aliquid aperiam delectus dolores inventore, laboriosam quae voluptate?</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid aperiam architecto ipsum libero, maiores odio porro quas, reiciendis sunt tenetur veniam voluptatem. Doloribus in obcaecati omnis quo repudiandae rerum</p>
+        <div style="padding-left: 50px; padding-right: 50px">
+            <div style="text-align: center">
+                <h1>Главная страница</h1>
+                <h2 th:text="${currentName}">Добро пожаловать</h2>
+            </div>
+            <div style="float: left; width: 30%" >
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab adipisci at consequuntur, dicta eligendi fuga fugit illum impedit, qui quis reprehenderit sed similique sint. Accusamus assumenda consequatur culpa reiciendis repudiandae!</p>
+            </div>
+            <div style="float: left; width: 30%; padding-left: 30px">
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto quaerat reiciendis sit voluptas. A aliquam eos laboriosam laudantium magnam sunt ullam ut. Aliquid aperiam delectus dolores inventore, laboriosam quae voluptate?</p>
+            </div>
+            <div style="float: left; width: 30%; padding-left: 30px">
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto quaerat reiciendis sit voluptas. A aliquam eos laboriosam laudantium magnam sunt ullam ut. Aliquid aperiam delectus dolores inventore, laboriosam quae voluptate?</p>
+            </div>
         </div>
     </body>
 </html>
