--- a/SpringBoot/src/main/resources/templates/styles.html
+++ b/SpringBoot/src/main/resources/templates/styles.html
@@ -12,15 +12,16 @@
     <style>
         .menu-main {
             list-style: none;
-            margin: 30px 0 5px;
-            padding: 15px 0 5px;
-            text-align: left;
+            margin: 30px 0 15px;
+            padding: 15px 0 15px;
+            text-align: center;
             background: white;
         }
         .menu-main li {display: inline-block;}
-
         .menu-main li:after {
             content: "|";
+            margin-left: 10px;
+            margin-right: 10px;
             color: #606060;
             display: inline-block;
             vertical-align:top;
@@ -29,11 +30,10 @@
         .menu-main a {
             text-decoration: none;
             font-family: 'Ubuntu Condensed', sans-serif;
-            letter-spacing: 2px;
+            letter-spacing: 3px;
             position: relative;
-            padding-bottom: 20px;
-            margin: 0 15px 0 15px;
-            font-size: 14px;
+
+            font-size: 16px;
             text-transform: uppercase;
             display: inline-block;
             transition: color .2s;
@@ -44,8 +44,7 @@
     </style>
     <ul class="menu-main">
         <li><a href="/app">Главная</a></li>
-        <li><a href="/app/customers.html">Покупатели</a></li>
-        <li><a href="/app/products.html">Товары</a></li>
+        <li><a href="/app/products">Товары</a></li>
     </ul>
 </menu>
 
@@ -55,7 +54,7 @@
             width: 300px;
             padding: 32px;
             border-radius: 10px;
-            box-shadow: 0 4px 16px #ccc;
+            box-shadow: 0 4px 16px #595ea2;
             font-family: sans-serif;
             letter-spacing: 1px;
         }
