--- a/SpringBoot/src/main/resources/templates/styles.html
+++ b/SpringBoot/src/main/resources/templates/styles.html
@@ -44,7 +44,7 @@
     </style>
     <ul class="menu-main">
         <li><a href="/app">Главная</a></li>
-        <li><a href="/app/products">Товары</a></li>
+        <li><a href="/app/products/page/1">Товары</a></li>
     </ul>
 </menu>
 
